# aws-ips-opnsense-rs

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
