[package]
name = "aws-ips-opnsense-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
full = "0.3.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"
